<resources>
    <string name="app_name">Social Login</string>

    <string name="logout">Logout?</string>
    <string name="loading">Loading…</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <string name="title_profile">User\'s profile</string>
    <string name="title_provider">User\'s provider</string>

    <string name="facebook_app_id">272465946638754</string>
    <string name="fb_login_protocol_scheme">fb272465946638754</string>

    <string name="twitter_api_key">pivXMUeZ4AKVDiCAxciZkk4bT</string>
    <string name="twitter_api_secret">2GNmZk7C2mFs68rURVplMovh7WvrSboFKwTBviTOuHy1UW4QDH</string>

    <string name="facebook_login">Login with Facebook</string>
    <string name="google_login">Login with Google</string>
    <string name="linkedin_login">Login with LinkedIn</string>
    <string name="twitter_login">Login with Twitter</string>
</resources>
