<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    style="@style/SocialRelativeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/logo"
        android:src="@mipmap/ic_launcher"
        style="@style/SocialLogoStyle"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/profile"
        style="@style/ProfileTextView"
        android:layout_below="@id/logo"
        android:text="@string/signed_out"/>

    <ImageView
        android:id="@+id/linkedin_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/linkedin_login"
        android:contentDescription="LinkedIn Login"/>

    <Button
        android:id="@+id/button_twitter_signout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_out"
        android:theme="@style/ThemeOverlay.DarkButton"
        android:visibility="gone"/>

</RelativeLayout>