<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    style="@style/SocialRelativeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbarStyle="outsideOverlay">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_profile"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/title_profile"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_profile"
            android:text="@string/signed_out"/>

        <LinearLayout
            android:id="@+id/provider_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"/>

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_provider"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/provider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:text="@string/app_name"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>