<RelativeLayout
    style="@style/SocialRelativeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/logo"
        android:src="@mipmap/ic_launcher"
        style="@style/SocialLogoStyle"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/profile"
        style="@style/ProfileTextView"
        android:layout_below="@id/logo"
        tools:text="@string/app_name"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible"
        tools:visibility="gone"/>

    <LinearLayout
        android:id="@+id/sign_out_and_disconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <Button
            android:id="@+id/google_logout_button"
            style="?android:attr/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_out"
            android:theme="@style/ThemeOverlay.DarkButton"/>

        <Button
            android:id="@+id/google_disconnect_button"
            style="?android:attr/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/disconnect"
            android:theme="@style/ThemeOverlay.DarkButton"/>

    </LinearLayout>

</RelativeLayout>